# urban-immune-system

./: .coveragerc  .cursorrules  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RUN_LOCAL.md  SECURITY.md  create_capstone_pptx.py  docker-compose.yml  generate_pdf.py  pyproject.toml  회의자료_캡스톤디자인.md
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pr_coverage_70.md  pr_gate_b_composite.md  pr_gate_b_regional.md  pr_w19.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  security.yml
.streamlit/: config.toml
admin/: 개인별 주간 진행사항-박진영.xlsx
analysis/: backtest_2025_flu.py  backtest_2025_flu_multi_17regions.py  backtest_label_validation.py  backtest_regression_tft.py  backtest_xgboost_covid.py  backtest_xgboost_multipath.py  bootstrap_ci.py  clinical_validation_real.py  granger_17regions.py  granger_heatmap.py  lead_time_2025w48.py  multiple_testing.py  sweep_l2_gate_threshold.py  urban_immune_analysis.py
analysis/data/: README.md
analysis/diagnostics/: tft_flatness_2026-05-22.md
analysis/notebooks/: performance_measurement.py
analysis/outputs/: backtest_17regions.json  backtest_2025_flu.json  backtest_national.json  backtest_xgboost_covid_17regions.json  backtest_xgboost_influenza_kdca_17regions.json  backtest_xgboost_norovirus_17regions.json  backtest_xgboost_norovirus_transition_17regions.json  bootstrap_ci_results.json  clinical_validation_real.json  forecast_ilinet_latest.json  forecast_ilinet_validation.json  granger_17regions_results.json  kowas_carry_forward_audit.json  kowas_l2_series.csv  label_validation_influenza.json  multiple_testing_results.json
analysis/results/: metrics_v1.json
analysis/sql/: alert_vs_cases.sql
backend/: CLAUDE.md  Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py  tasks.py
docs/: 11주차_주간일지.txt  13주차_팀주간일지.txt  8주차_주간일지.txt  CHATBOT_KNOWLEDGE.md  CLAUDE.md  REAL_CLINICAL_FORECAST.md  STATUS.md  UIS_중간보고서_2026.docx  UIS_중간보고서_2026_v2.docx  UIS_최종보고서_2026.docx  UIS_최종보고서_2026_v2.docx  api-spec.md  architecture.md  collaboration-guide.md  data-sources.md  development.md  layer_specs.md  load-testing.md  make_final_report.py  make_midterm_report.py  ml_specs.md  qa-cards.md  scope-decisions.md  security.md  team-explainer.md  개인별 주간 진행사항-박진영.xlsx  발표_용어_쉬운설명.txt  전문가_검증_연락처_리스트.txt  중간발표_설명자료.txt  중간발표_통합설명자료.txt  특허출원_할일목록.txt
docs/architecture/: cv_limitations.md  data_freshness.md  gate_b_regional_v2.md
docs/business/: CLAUDE.md  budget-2026-capstone.md  d8-action-plan.md  ip_action_guide.md  isms-p-checklist.md  pricing-model.md  procurement.md  roadmap.md  sales-targets.md
docs/guides/: team_action_guide_2026-05-10.md
docs/integrations/: hira-opendata.md
docs/meeting/: README.md  capstone-design-notes.md  design-notes.md
docs/meeting-notes/: 2026-04-15_팀킥오프.md  2026-04-15_팀킥오프.pptx  2026-04-28_팀협업가이드.pptx  README.md  demo-scripts.md  midterm-9day-sprint.md  setup-per-role.md
docs/onboarding/: README.md  SYSTEM_OVERVIEW_2026-05-27.md  김나영.md  박정빈.md  박진영.md  이경준.md  이우형.md
docs/operations/: backup_and_alerts.md  systemd_services.md
docs/portfolio/: README.md  metrics-history.md  portfolio.html  timeline.md
frontend/: .env.example  CLAUDE.md  Dockerfile  README.md  design-brief.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
infra/: CLAUDE.md
ml/: CLAUDE.md  Dockerfile  model_card.md  reproduce_validation.py  requirements.txt  serve.py
pipeline/: CLAUDE.md  Dockerfile  report_trigger.py  requirements.txt  scorer.py
presentation/: V11_metric_notes.md  V12_metric_notes.md
prototype/: README.md  app.py  requirements.txt
scripts/: build_advisory_package.sh  build_portfolio.py  build_review_pdf.py  build_team_guide_pdf.py  check_data_freshness.sh  check_f1_regression.sh  export_slides_pptx.py  freshness_alert.sh  gen_kickoff_pptx.py  gen_midterm_pptx.py  gen_team_materials.py  patch_slides_overlay.py  reports_to_pdf.py  run_all.sh  seed_demo_db.py  setup_cron.sh  setup_github_labels.sh  sync-slides.sh  update_scoreboard.py  verify_onboarding.sh
src/: CLAUDE.md  __init__.py  api_client.py  app.py  config.py  styles.py  utils.py
tests/: CLAUDE.md  benchmark_xgboost.py  conftest.py  test_advisory_pdf.py  test_alert_service.py  test_alerts_api.py  test_alerts_explain.py  test_anomaly_autoencoder.py  test_api_signals.py  test_auth_middleware.py  test_backend_config.py  test_backend_tasks.py  test_claude_md_presence.py  test_collector_health_completeness.py  test_config.py  test_container_layout.py  test_db_writer.py  test_eval_metrics.py  test_k8s_security.py  test_kafka_producer.py  test_kcdc_collector.py  test_kdca_label_collector.py  test_kdca_sentinel_parser.py  test_kowas_downloader.py  test_kowas_loader.py  test_kowas_parser.py  test_ml_serve.py  test_ml_serve_metadata.py  test_ml_train_smoke.py  test_naver_backfill.py  test_naver_data_quality.py  test_normalization.py  test_prediction_service_extended.py  test_predictions_explain.py  test_rag_seed_docs_runtime.py  test_rag_vectordb.py  test_report_generator.py  test_report_pdf.py  test_report_trigger.py  test_reproduce_validation.py  (+7 more)
(+298 files in other folders)
