[project]
name = "urban-immune-system"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.55",
    "pandas>=2.2",
    "numpy>=2.0",
    "plotly>=5.24",
    "folium>=0.18",
    "streamlit-folium>=0.23",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0.36",
]
pipeline = [
    "confluent-kafka>=2.6",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "apscheduler>=3.10",
]
ml = [
    "torch>=2.5",
    "pytorch-forecasting>=1.1",
    "pytorch-lightning>=2.4",
    "scikit-learn>=1.5",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.2",
    "openai>=1.54",
    "anthropic>=0.39",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
]
all = [
    "urban-immune-system[backend,pipeline,ml,dev]",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "backend*", "pipeline*", "ml*"]
exclude = ["tests*", "frontend*", "prototype*", "analysis*", "docs*", "infra*", "scripts*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov=backend --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
