[project]
name = "urban-immune-system"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "folium>=0.15",
    "streamlit-folium>=0.18",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic-settings>=2.1",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
    "matplotlib>=3.8",
    "taskiq>=0.11",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "anthropic>=0.28",
]
pipeline = [
    "kafka-python>=2.0.2",
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "apscheduler>=3.10",
]
ml = [
    "torch>=2.2",
    "pytorch-forecasting>=1.0",
    "pytorch-lightning>=2.2",
    "scikit-learn>=1.4",
    "qdrant-client>=1.7",
    "langchain>=0.1",
    "openai>=1.10",
    "anthropic>=0.28",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
all = [
    "urban-immune-system[backend,pipeline,ml,dev]",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --ignore=tests/load"
# 커버리지 측정·게이트는 CI 워크플로우의 전체 스위트 잡(legacy-test)에서만 적용한다.
# addopts 에 두면 단일 파일 잡(backend-test) 에서 coverage dilution → fail-under 충돌
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend", "ml", "pipeline"]
omit = ["tests/*", ".venv/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
# TODO(W18): 70% 복구 목표 — W17 중간발표 기준 60%로 강하 가능성 있음

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
